--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -21,6 +21,13 @@ global
         ssl-default-bind-ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS
         ssl-default-bind-options no-sslv3
 
+	ssl-server-verify required
+	tune.bufsize 40960
+	tune.ssl.maxrecord 1460
+	tune.ssl.cachesize 100000
+	tune.ssl.lifetime 600
+	tune.ssl.default-dh-param 2048
+
 defaults
         log     global
         mode    http
@@ -32,11 +39,17 @@ defaults
 #	log the error by http status code
 #        errorfile 400 /etc/haproxy/errors/400.http
 
-frontend www
-   bind 172.17.0.2:80
+frontend http
+   bind *:80
+   redirect scheme https code 301 if !{ ssl_fc }
+
+frontend https
+   # pems be stored in "/etc/letsencrypt/live"
+   bind *:443 ssl crt /total.pem
+   reqadd X-Forwarded-Proto:\ https
    option http-server-close
    option forwardfor
-   acl aclname1 hdr(host) -i DOMAIN_NAME 
+   acl aclname1 hdr(host) -i $DOMAIN1
    use_backend backend1 if aclname1 
    default_backend backend2
 
@@ -46,8 +59,9 @@ backend backend2
    server server2 172.17.0.1:9000 check
 
 listen logsrv
-  bind 0.0.0.0:443
+  bind 0.0.0.0:8888
   stats enable
   stats uri /
   mode http
   log global
+
