add two domain, and remove test-cert argument,  but haproxy.cfg still cannot eat env var

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -49,9 +49,9 @@ frontend https
    reqadd X-Forwarded-Proto:\ https
    option http-server-close
    option forwardfor
-   acl aclname1 hdr(host) -i $DOMAIN1
-   use_backend backend1 if aclname1 
-   default_backend backend2
+   acl aclname1 hdr(host) -i <modify by manual> 
+   use_backend backend2 if aclname1 
+   default_backend backend1
 
 backend backend1
    server server1 172.17.0.1:8000 check
